# diff

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: quality.yaml  release.yml
src/diff/: __init__.py  delta.py  diff.py  json_path.py  operation.py  patch.py
tests/: test_diff.py
